# roblox-api

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: auth.rs  client.rs  dev.rs  thumbnails.rs  users.rs  web_socket.rs
src/: challenge.rs  client.rs  lib.rs  ratelimit.rs  validation.rs
src/api/: mod.rs
src/api/account_information/: v1.rs
src/api/asset_delivery/: v1.rs
src/api/assets/: v1.rs
src/api/auth/: mod.rs  v1.rs
src/api/auth_token_service/: v1.rs
src/api/avatar/: v1.rs
src/api/badges/: v1.rs
src/api/challenge/: v1.rs
src/api/data/: mod.rs
src/api/develop/: v1.rs
src/api/economy/: v1.rs  v2.rs
src/api/friends/: v1.rs
src/api/gamepasses/: v1.rs
src/api/games/: v1.rs  v2.rs
src/api/groups/: v1.rs
src/api/hba_service/: v1.rs
src/api/inventory/: v1.rs  v2.rs
src/api/marketplace_sales/: v1.rs
src/api/notifications/: v2.rs
src/api/platform_chat/: v1.rs
src/api/premium_features/: v1.rs
src/api/presence/: v1.rs
src/api/private_messages/: v1.rs
src/api/thumbnails/: v1.rs
src/api/toolbox_service/: v1.rs
src/api/two_step_verification/: v1.rs
src/api/user_agreements/: v1.rs
src/api/user_blocking/: v1.rs
src/api/users/: v1.rs
src/api/web_socket/: mod.rs  user_hub.rs
tests/: ratelimit.rs
tests/api/: mod.rs
tests/api/account_information/: v1.rs
tests/api/assets/: v1.rs
tests/api/auth_token_service/: v1.rs
tests/api/avatar/: v1.rs
tests/api/badges/: v1.rs
tests/api/economy/: v1.rs  v2.rs
tests/api/friends/: v1.rs
tests/api/gamepasses/: v1.rs
tests/api/games/: v1.rs  (+1 more)
(+11 files in other folders)
