[package]
name = "roblox-api"
readme = "README.md"
description = "Roblox web api bindings"
repository = "https://github.com/elde-n/roblox-api"

version = "0.1.2"
edition = "2024"
license = "LGPL-3.0-only"

[features]
rusttls = ["reqwest/rustls-tls"]

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
p256 = "0.13.2"
reqwest = { version = "0.12.18", default-features = false, features = [
    "json",
    "default-tls",
    "multipart",
    "stream"
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
dotenvy_macro = "0.15.7"
tokio = { version = "1.27.0", features = ["full"] }
